# NodeArena

./: .gitignore
challenges/: challenges.json  state.json
challenges/00_Introduction/challenge_c00/: CMakeLists.txt  README.md  package.xml
challenges/00_Introduction/challenge_c01/: CMakeLists.txt  README.md  package.xml
challenges/00_Introduction/challenge_c02/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c03/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c04/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c05/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c06/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c06/src/: challenge_c06.cpp
challenges/00_Introduction/challenge_c07/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c08/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c09/: CMakeLists.txt  README.md  flag  package.xml
challenges/00_Introduction/challenge_c10/: CMakeLists.txt  README.md  flag  (+1 more)
challenges/02_Advanced/challenge_c201/: CMakeLists.txt  README.md  flag  package.xml
challenges/02_Advanced/challenge_c201/src/: challenge_c201.cpp
docker/: Dockerfile  build  run
tools/: challenge_generator.py  challengelist_updater.py  flag_hasher.py
ui/: config.py  main.py
ui/components/: __init__.py  cards.py  header.py  terminal.py
ui/models/: __init__.py  badges.py  challenge.py  state.py
ui/utils/: __init__.py  navigation.py
ui/views/: __init__.py  challenge.py  dashboard.py  library.py  module.py  profile.py
(+16 files in other folders)
